fix(Input): keep label margin consistent when focused, to avoid undesired shift on focus (#351)

--- a/src/Input/index.scss
+++ b/src/Input/index.scss
@@ -21,7 +21,7 @@
 
       label {
         color: RGB(var(--nds-primary-color));
-        margin-bottom: -4px;
+        margin-bottom: -3px;
       }
     }
   }
